--- a/src/partials/extra.html
+++ b/src/partials/extra.html
@@ -1,4 +1,4 @@
-<div class="backdrop " data-model>
+<div class="backdrop" data-model>
   <div class="success-modal">
     <button class="modal-x-btn" type="button" data-modal-close>
       <svg class="modal-x-icon" width="32" height="32">
@@ -18,12 +18,16 @@
         media="(min-width: 768px)"
         srcset="
           /images/modal/modal-tab.jpg    1x,
-          /images/modal/modal-tab@2x.jpg 2x"
+          /images/modal/modal-tab@2x.jpg 2x
+        "
       />
-      <img class="modal-img" src="/images/modal/modal-mob.jpg" 
-      srcset="/images/modal/modal-mob@2x.jpg 2x"
-      alt="Letter with a cup of coffee" 
-      loading="lazy" />
+      <img
+        class="modal-img"
+        src="/images/modal/modal-mob.jpg"
+        srcset="/images/modal/modal-mob@2x.jpg 2x"
+        alt="Letter with a cup of coffee"
+        loading="lazy"
+      />
     </picture>
     <button class="modal-close-btn" type="button" data-modal-close>
       Close
