--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,7 +7,6 @@
 
 .footer-content {
   background-color: #c29d84;
-
   border: 1px solid rgba(11, 8, 3, 0.15);
   border-radius: 40px;
   padding: 32px 46px;
@@ -20,7 +19,6 @@
 .footer-logo-link {
   width: 196px;
   height: 84px;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,14 +33,11 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-
   margin-top: 40px;
-
   margin-bottom: 32px;
 }
 
-.footer-social-item {
-}
+.footer-social-item {}
 
 .footer-social-link {
   width: 32px;
@@ -61,30 +56,28 @@
   align-items: center;
 }
 
-.footer-nav-item {
-}
+.footer-nav-item {}
 
 .footer-item-link {
   line-height: 1.5;
   color: #0b0803;
-
   cursor: pointer;
 }
 
 .footer-text {
   font-size: 14px;
   line-height: 1.5;
-
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 /*#endregion Footer#*/
 
 /* #region Media Tablet*/
 @media screen and (min-width: 768px) {
   .footer-container {
-    min-width: 768px;
+    max-width: 768px;
     width: 100%;
     height: 257px;
     padding-left: 32px;
@@ -112,24 +105,25 @@
     gap: 12px;
   }
 
-  .footer-social-item {
-  }
+  .footer-social-item {}
 
   .footer-social-link {
     width: 32px;
     height: 32px;
   }
+
   .footer-nav-list {
     flex-direction: row;
     margin-top: 32px;
   }
 }
+
 /* #endregion Media Tablet*/
 
 /* #region Media Desktop*/
 @media screen and (min-width: 1440px) {
   .footer-container {
-    min-width: 1440px;
+    max-width: 1440px;
     height: 201px;
     padding-left: 64px;
     padding-right: 64px;
@@ -150,4 +144,5 @@
     margin-top: 0;
   }
 }
+
 /* #endregion Media Desktop*/
