--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -1,5 +1,5 @@
 <section class="experience" id="Gallery">
-  <div class="container container-column">
+  <div class="container section container-column">
     <div class="title-container">
       <h2 class="experience-title">Coffee Moments</h2>
       <p class="experience-text">
@@ -16,7 +16,6 @@
               images/experience/experience-img-one-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -24,7 +23,6 @@
               images/experience/experience-img-one-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-one-mob-1x.png"
             srcset="images/experience/experience-img-one-mob-2x.png 2x"
@@ -43,7 +41,6 @@
               images/experience/experience-img-two-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -51,7 +48,6 @@
               images/experience/experience-img-two-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-two-mob-1x.png"
             srcset="images/experience/experience-img-two-mob-2x.png 2x"
@@ -70,7 +66,6 @@
               images/experience/experience-img-three-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -78,7 +73,6 @@
               images/experience/experience-img-three-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-three-mob-1x.png"
             srcset="images/experience/experience-img-three-mob-2x.png 2x"
@@ -97,7 +91,6 @@
               images/experience/experience-img-four-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -105,7 +98,6 @@
               images/experience/experience-img-four-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-four-mob-1x.png"
             srcset="images/experience/experience-img-four-mob-2x.png 2x"
@@ -124,7 +116,6 @@
               images/experience/experience-img-five-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -132,7 +123,6 @@
               images/experience/experience-img-five-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-five-mob-1x.png"
             srcset="images/experience/experience-img-five-mob-2x.png 2x"
@@ -151,7 +141,6 @@
               images/experience/experience-img-six-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -159,7 +148,6 @@
               images/experience/experience-img-six-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-six-mob-1x.png"
             srcset="images/experience/experience-img-six-mob-2x.png 2x"
@@ -178,7 +166,6 @@
               images/experience/experience-img-seven-desk-2x.png 2x
             "
           />
-
           <source
             media="(min-width: 768px)"
             srcset="
@@ -186,7 +173,6 @@
               images/experience/experience-img-seven-tab-2x.png 2x
             "
           />
-
           <img
             src="images/experience/experience-img-seven-mob-1x.png"
             srcset="images/experience/experience-img-seven-mob-2x.png 2x"
