--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -19,7 +19,7 @@
 
           <span class="welcome__btn-icon" aria-hidden="true">
             <svg class="welcome__btn-svg" width="18" height="18">
-              <use href="#icon-icon-map-pinsvg"></use>
+              <use href="/images/icons.svg#icon-map"></use>
             </svg>
           </span>
         </a>
