--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,11 +9,17 @@
   background-color: #c29d84;
   border: 1px solid rgba(11, 8, 3, 0.15);
   border-radius: 40px;
-  padding: 32px 46px;
+  padding: 32px 48px;
   min-width: 288px;
   height: 500px;
   width: 100%;
   margin: 0 auto 32px;
+}
+
+.footer-logo-social {
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
 }
 
 .footer-logo-link {
@@ -77,7 +83,7 @@
 /* #region Media Tablet*/
 @media screen and (min-width: 768px) {
   .footer-container {
-    max-width: 768px;
+    min-width: 768px;
     width: 100%;
     height: 257px;
     padding-left: 32px;
@@ -91,18 +97,22 @@
 
   .footer-logo-link {
     width: 84px;
+    align-items: flex-start;
   }
-
+  .footer-logo {
+height: 36px;
+}
   .footer-logo-social {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 36px;
     gap: 40px;
   }
 
   .footer-social {
+    height: 24px;
     gap: 12px;
+    margin: 0;
   }
 
   .footer-social-item {}
