--- a/src/css/location.css
+++ b/src/css/location.css
@@ -144,6 +144,9 @@
 }
 
 @media screen and (min-width: 1440px) {
+    .container {
+        display: block;
+    }
     .loc-title {
         font-size: 48px;
     }
