--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="container subscribe-container">
     <div class="wraper">
       <h2 class="subscribe-title section-title">Join Our Coffee Community</h2>
       <p class="subscribe-text">
