--- a/src/partials/experience.html
+++ b/src/partials/experience.html
@@ -1,4 +1,4 @@
-<section class="experience" id="Gallery">
+<section class="experience" id="gallery">
   <div class="container experience-container section">
     <div class="title-container">
       <h2 class="experience-title">Coffee Moments</h2>
