--- a/src/partials/extra.html
+++ b/src/partials/extra.html
@@ -1,4 +1,4 @@
-<div class="backdrop" data-model>
+<div class="backdrop" data-modal>
   <div class="success-modal">
     <button class="modal-x-btn" type="button" data-modal-close>
       <svg class="modal-x-icon" width="32" height="32">
