--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -71,7 +71,7 @@
 
 
 @media screen and (min-width: 1440px) {
-    .section-title {
+    .testimonials-title {
         font-size: 48px;
         max-width: 416px;
     }
