--- a/src/partials/quality.html
+++ b/src/partials/quality.html
@@ -1,8 +1,8 @@
 <section id="quality" class="quality-section">
-  <div class="container child">
+  <div class="container section child">
     <div class="quality-intro">
       <p class="quality-section-name">Quality</p>
-      <h2 class="quality-section-title">
+      <h2 class="quality-section-title section-title">
         Why CoffeeJoy Stands Out from the Rest
       </h2>
       <p class="quality-descr">
