--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -1,9 +1,11 @@
-<section class="welcome">
+<section class="welcome container section">
   <div class="welcome__container">
     <div class="welcome__top">
       <div class="welcome__left">
         <p class="welcome__label">Welcome</p>
-        <h2 class="welcome__title">Our Journey: Passion for Quality Coffee</h2>
+        <h2 class="welcome__title section-title">
+          Our Journey: Passion for Quality Coffee
+        </h2>
       </div>
 
       <div class="welcome__right">
