--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -2,8 +2,7 @@
    WELCOME — Mobile first
 ========================= */
 
-.welcome {
-    background-color: #e0cbb4;
+/* .welcome {
     padding: 64px 0;
 }
 
@@ -11,7 +10,7 @@
     max-width: 100%;
     margin: 0 auto;
     padding: 0 16px;
-}
+} */
 
 .welcome__top {
     display: flex;
@@ -23,7 +22,6 @@
 }
 
 .welcome__label {
-    font-family: "Quicksand", sans-serif;
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
@@ -32,14 +30,12 @@
 }
 
 .welcome__title {
-    font-family: "Aboreto", sans-serif;
     font-weight: 400;
     font-size: 32px;
     line-height: 1.2;
     letter-spacing: -0.01em;
     text-transform: uppercase;
     color: #0b0803;
-    margin: 0;
 }
 
 .welcome__right {
@@ -122,11 +118,6 @@
    375px+
 ========================= */
 @media screen and (min-width: 375px) {
-
-
-    .welcome {
-        padding: 56px 0;
-    }
 
     .welcome__container {
         max-width: 375px;
