--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,19 +8,19 @@
     <nav class="header-nav">
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a class="header-item-link" href="#">About us</a>
+          <a class="header-item-link" href="#about-us">About us</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-item-link" href="#">Benefits</a>
+          <a class="header-item-link" href="#quality">Benefits</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-item-link" href="#">Gallery</a>
+          <a class="header-item-link" href="#gallery">Gallery</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-item-link" href="#">Testimonial</a>
+          <a class="header-item-link" href="#testimonials">Testimonial</a>
         </li>
         <li class="header-nav-item">
-          <a class="header-item-link" href="#">Location</a>
+          <a class="header-item-link" href="#location">Location</a>
         </li>
       </ul>
     </nav>
