--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -15,19 +15,19 @@
     <nav class="mobile-nav">
       <ul class="mobile-nav-list">
         <li class="mobile-nav-item">
-          <a class="mobile-item-link" href="">About us</a>
+          <a class="mobile-item-link" href="#about-us">About us</a>
         </li>
         <li class="mobile-nav-item">
-          <a class="mobile-item-link" href="">Benefits</a>
+          <a class="mobile-item-link" href="#quality">Benefits</a>
         </li>
         <li class="mobile-nav-item">
-          <a class="mobile-item-link" href="">Gallery</a>
+          <a class="mobile-item-link" href="#gallery">Gallery</a>
         </li>
         <li class="mobile-nav-item">
-          <a class="mobile-item-link" href="">Testimonial</a>
+          <a class="mobile-item-link" href="#testimonials">Testimonial</a>
         </li>
         <li class="mobile-nav-item">
-          <a class="mobile-item-link" href="">Location</a>
+          <a class="mobile-item-link" href="#location">Location</a>
         </li>
       </ul>
     </nav>
