--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer-container">
-    <div class="footer-content container">
+    <div class="footer-content">
       <div class="footer-logo-social">
         <a class="footer-logo-link" href="/index.html">
           <svg class="footer-logo" width="146" height="84">
@@ -10,21 +10,21 @@
         <ul class="footer-social">
           <li class="footer-social-item">
             <a class="footer-social-link" href="https://www.facebook.com/">
-              <svg class="footer-social-icon" width="27" height="27">
+              <svg class="footer-social-icon icon-f" width="27" height="27">
                 <use href="/images/icons.svg#icon-Facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-link" href="https://www.instagram.com/">
-              <svg class="footer-social-icon" width="27" height="27">
+              <svg class="footer-social-icon icon-i" width="24" height="24">
                 <use href="/images/icons.svg#icon-Instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-link" href="https://x.com/">
-              <svg class="footer-social-icon" width="27" height="27">
+              <svg class="footer-social-icon icon-x" width="24" height="22">
                 <use href="/images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
