--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,4 @@
-<section class="testimonials">
+<section class="testimonials" id="testimonials">
   <div class="container">
     <div class="section">
       <h2 class="testimonials-title section-title">What our visitors say</h2>
