--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -1,4 +1,4 @@
-<section class="welcome container section">
+<section class="welcome container section" id="about-us">
   <div class="welcome__container">
     <div class="welcome__top">
       <div class="welcome__left">
