--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -15,6 +15,7 @@
     border: 1px solid rgba(11, 8, 3, 0.15);
     border-radius: 32px;
     padding: 32px;
+    min-width: 288px;
     width: 100%;
 }
 
