fix close button in modal and refreshing page

--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -18,7 +18,7 @@
             />
             <span class="error-message">Error Text</span>
           </label>
-          <button class="submit" type="submit" data-modal-open>
+          <button class="submit" type="submit">
             Subscribe
             <svg class="icon-chevrons-right" width="24" height="24">
               <use href="/images/icons.svg#icon-chevrons-right"></use>
