--- a/src/partials/extra.html
+++ b/src/partials/extra.html
@@ -1,6 +1,6 @@
 <div class="backdrop" data-modal>
   <div class="success-modal">
-    <button class="modal-x-btn" type="button" data-modal-close>
+    <button class="modal-x-btn" type="button" data-modal-close-x>
       <svg class="modal-x-icon" width="32" height="32">
         <use href="/images/icons.svg#icon-x"></use>
       </svg>
@@ -29,7 +29,7 @@
         loading="lazy"
       />
     </picture>
-    <button class="modal-close-btn" type="button" data-modal-close>
+    <button class="modal-close-btn" type="button" data-modal-close-btn>
       Close
     </button>
   </div>
