--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -46,8 +46,15 @@
 }
 
 .footer-social-item {
+  transition: opacity 250ms ease-in-out;
 }
-
+.footer-social-item:hover,
+.footer-social-item:focus {
+  opacity: 0.5;
+}
+.footer-social-item:active {
+  opacity: 0.7;
+}
 .footer-social-link {
   width: 32px;
   height: 32px;
@@ -66,6 +73,14 @@
 }
 
 .footer-nav-item {
+  transition: opacity 250ms ease-in-out;
+}
+.footer-nav-item:hover,
+.footer-nav-item:focus {
+  opacity: 0.5;
+}
+.footer-nav-item:active {
+  opacity: 0.7;
 }
 
 .footer-item-link {
