--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,19 +33,19 @@
       </div>
       <ul class="footer-nav-list">
         <li class="footer-nav-item">
-          <a class="footer-item-link" href="">About us</a>
+          <a class="footer-item-link" href="#about-us">About us</a>
         </li>
         <li class="footer-nav-item">
-          <a class="footer-item-link" href="">Benefits</a>
+          <a class="footer-item-link" href="#quality">Benefits</a>
         </li>
         <li class="footer-nav-item">
-          <a class="footer-item-link" href="">Gallery</a>
+          <a class="footer-item-link" href="#gallery">Gallery</a>
         </li>
         <li class="footer-nav-item">
-          <a class="footer-item-link" href="">Testimonial</a>
+          <a class="footer-item-link" href="#testimonials">Testimonial</a>
         </li>
         <li class="footer-nav-item">
-          <a class="footer-item-link" href="">Location</a>
+          <a class="footer-item-link" href="#location">Location</a>
         </li>
       </ul>
     </div>
