fix location section

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,9 +1,9 @@
-<section class="container section" id="location">
-  <div class="loc-content">
+<section class="section" id="location">
+  <div class="loc-content container">
     <div class="loc-textarea">
       <div class="loc-title-box">
         <p class="loc-per-title">Find</p>
-        <h2 class="loc-title">LOCATION</h2>
+        <h2 class="loc-title section-title">LOCATION</h2>
         <p class="loc-text">Visit us at our cozy coffee shop!</p>
       </div>
       <div class="loc-contacts">
