--- a/src/css/location.css
+++ b/src/css/location.css
@@ -17,15 +17,11 @@
 }
 
 .loc-title {
-    padding-top: 16px;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 1.2;
-    letter-spacing: -0.01em;
+    margin-top: 16px;
 }
 
 .loc-text {
-    padding-top: 24px;
+    margin-top: 24px;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.5;
@@ -54,7 +50,7 @@
 }
 
 .loc-contacts-title {
-    padding-top: 16px;
+    margin-top: 16px;
     font-weight: 400;
     font-size: 20px;
     line-height: 1.4;
@@ -63,7 +59,7 @@
 
 .loc-link {
     font-style: normal;
-    padding-top: 8px;
+    margin-top: 8px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -86,7 +82,7 @@
 .loc-text.loc-address {
     font-style: normal;
     font-size: 16px;
-    padding-top: 8px;
+    margin-top: 8px;
 }
 
 .loc-map-link {
@@ -94,7 +90,7 @@
     align-items: center;
     gap: 8px;
     font-style: normal;
-    padding-top: 16px;
+    margin-top: 16px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -144,9 +140,8 @@
 }
 
 @media screen and (min-width: 1440px) {
-    .container {
-        
-    }
+    .container {}
+
     .loc-title {
         font-size: 48px;
     }
