--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -4,7 +4,6 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  /* z-index: 999; */
   display: flex;
   flex-direction: column;
   opacity: 0;
@@ -15,6 +14,12 @@
     visibility 250ms ease;
 
   background-color: #e0cbb4;
+}
+
+.mobile-menu .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile-menu.is-open {
@@ -59,31 +64,21 @@
   margin: 12px 0;
 }
 
-/* .mobile-close-btn:hover,
-.mobile-close-btn:focus {
-  opacity: 0.5;
-}
-
-.mobile-close-btn:active {
-  background-color: rgba(11, 8, 3, 0.1);
-} */
-
 .mobile-close {
   fill: #0b0803;
 }
 
 .mobile-nav {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mobile-nav-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 32px;
-}
-
-.mobile-nav-item {
 }
 
 .mobile-item-link {
@@ -93,18 +88,6 @@
 
   padding: 16px;
 }
-
-/* .mobile-item-link:hover {
-    opacity: 0.5;
-  }
-
-  .mobile-item-link:focus {
-    opacity: 0.7;
-  }
-
-  .mobile-item-link:active {
-    opacity: 0.2;
-  } */
 
 @media (min-width: 768px) {
   .mobile-menu {
