fix: update partials (quality/testimonials/welcome)

--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -1,5 +1,5 @@
-<section class="welcome container section" id="about-us">
-  <div class="welcome__container">
+<section class="welcome section" id="about-us">
+  <div class="welcome__container container">
     <div class="welcome__top">
       <div class="welcome__left">
         <p class="welcome__label">Welcome</p>
