--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <div class="footer-content">
       <div class="footer-logo-social">
-        <a class="footer-logo-link" href="/index.html">
+        <a class="footer-logo-link" href="index.html">
           <svg class="footer-logo" width="146" height="84">
             <use href="/images/icons.svg#icon-logo"></use>
           </svg>
@@ -31,23 +31,25 @@
           </li>
         </ul>
       </div>
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item">
-          <a class="footer-item-link" href="#about-us">About us</a>
-        </li>
-        <li class="footer-nav-item">
-          <a class="footer-item-link" href="#quality">Benefits</a>
-        </li>
-        <li class="footer-nav-item">
-          <a class="footer-item-link" href="#gallery">Gallery</a>
-        </li>
-        <li class="footer-nav-item">
-          <a class="footer-item-link" href="#testimonials">Testimonial</a>
-        </li>
-        <li class="footer-nav-item">
-          <a class="footer-item-link" href="#location">Location</a>
-        </li>
-      </ul>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="#about-us">About us</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="#quality">Benefits</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="#gallery">Gallery</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="#testimonials">Testimonial</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-item-link" href="#location">Location</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <p class="footer-text">&#169; 2025 CoffeeJoy. All rights reserved.</p>
   </div>
