--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -9,6 +9,7 @@
       <div class="blok-form">
         <form class="form-subscribe">
           <label class="label-subscribe" for="input-subscribe">
+            <span class="visually-hidden">Email address</span>
             <input
               class="input-subscribe"
               type="email"
@@ -16,7 +17,9 @@
               name="input-subscribe"
               placeholder="Your Email Here"
             />
-            <span class="error-message">Error Text</span>
+            <span class="error-message">
+              Incorrect email format. Please try again.
+            </span>
           </label>
           <button class="submit" type="submit">
             Subscribe
