--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -9,7 +9,6 @@
       <div class="blok-form">
         <form class="form-subscribe">
           <label class="label-subscribe" for="input-subscribe">
-            <span class="visually-hidden">Email address</span>
             <input
               class="input-subscribe"
               type="email"
@@ -17,9 +16,7 @@
               name="input-subscribe"
               placeholder="Your Email Here"
             />
-            <span class="error-message">
-              Incorrect email format. Please try again.
-            </span>
+            <span class="error-message">Error Text</span>
           </label>
           <button class="submit" type="submit">
             Subscribe
