--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -77,7 +77,7 @@
 @media screen and (min-width: 1440px) {
   .experience-title {
     font-size: 48px;
-  }
+  } }
 
 /* МОБИЛКА - 2 колонки */
 @media (max-width: 767px) {
