--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -125,7 +125,7 @@
 @media screen and (min-width: 1440px) {
   .experience-title {
     font-size: 48px;
-  } }
+  } 
 
   .coffe-lists-box {
     width: 1312px;
