--- a/src/partials/quality.html
+++ b/src/partials/quality.html
@@ -1,4 +1,4 @@
-<section id="quality" class="section">
+<section id="quality" class="section quality-section">
   <div class="container child">
     <div class="quality-intro">
       <p class="quality-section-name">Quality</p>
