--- a/src/css/quality.css
+++ b/src/css/quality.css
@@ -169,6 +169,7 @@ img {
 
     .quality-section .quality-list {
         display: flex;
+        flex-direction: row;
         gap: 24px;
         flex-wrap: nowrap;
         align-items: flex-start;
