--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -73,6 +73,11 @@
   height: 40px;
   background-color: #e0cbb4;
   border: 1px solid rgba(11, 8, 3, 0.15);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-subscribe:focus {
+  border-color: #6f4e37;
 }
 
 .submit:hover,
@@ -112,7 +117,9 @@
   visibility: hidden;
 }
 
-.label-subscribe .input-subscribe:not(:placeholder-shown):invalid~.error-message {
+.label-subscribe
+  .input-subscribe:not(:placeholder-shown):invalid
+  ~ .error-message {
   opacity: 1;
   visibility: visible;
 }
@@ -125,7 +132,6 @@
 
 /* #region Media Tablet*/
 @media screen and (min-width: 768px) {
-
   .form-subscribe {
     display: flex;
     gap: 24px;
@@ -149,12 +155,12 @@
   .blok-form p {
     margin-top: 16px;
   }
-
 }
 
 @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {}
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+}
 
 /* #endregion Media Tablet*/
 
@@ -167,7 +173,7 @@
   }
 
   .subscribe-title {
-    font-size: 48px
+    font-size: 48px;
   }
 
   .wraper {
@@ -177,7 +183,6 @@
   .form-subscribe {
     gap: 16px;
   }
-
 }
 
 /* #endregion Media Desktop*/
