fix link margin

--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -13,7 +13,7 @@
               <use href="/images/icons.svg#icon-envelope"></use>
             </svg>
             <h3 class="loc-contacts-title">EMAIL</h3>
-            <address>
+            <address class="link-address">
               <a class="loc-link" href="mailto:hello@coffeejoy.com">
                 hello@coffeejoy.com
               </a>
@@ -24,7 +24,7 @@
               <use href="/images/icons.svg#icon-phone"></use>
             </svg>
             <h3 class="loc-contacts-title">PHONE</h3>
-            <address>
+            <address class="link-address">
               <a class="loc-link" href="tel:+1555123-5321">+1 (555) 123-5321</a>
             </address>
           </li>
@@ -33,7 +33,7 @@
               <use href="/images/icons.svg#icon-map"></use>
             </svg>
             <h3 class="loc-contacts-title">OFFICE</h3>
-            <address>
+            <address class="link-address">
               <p class="loc-text loc-address">
                 263 Newbury St, Boston, MA 02116, USA
               </p>
