--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,4 +1,16 @@
 /* #region Subscribe*/
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .subscribe-title {
   margin-bottom: 24px;
@@ -60,8 +72,7 @@
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* margin-top: 24px; */
-}
+  }
 
 .input-subscribe {
   outline: none;
@@ -73,6 +84,9 @@
   height: 40px;
   background-color: #e0cbb4;
   border: 1px solid rgba(11, 8, 3, 0.15);
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+              background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .submit:hover,
@@ -93,6 +107,10 @@
 
 .input-subscribe:not(:placeholder-shown):invalid {
   border-color: #7f1c1c;
+}
+
+.input-subscribe:focus {
+  border-color: rgba(11, 8, 3, 0.4);
 }
 
 .error-message {
