--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -41,6 +41,7 @@
                 class="loc-map-link"
                 href="https://maps.app.goo.gl/iyUjDjZmxvcZtBtNA"
                 target="_blank"
+                rel = "noopener"
               >
                 Get Directions
                 <svg class="loc-icon" width="24" height="24">
