--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
         </a>
         <ul class="footer-social">
           <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.facebook.com/">
+            <a class="footer-social-link" href="https://www.facebook.com/" rel = "noopener">
               <svg class="footer-social-icon icon-f" width="32" height="32">
                 <use href="/images/icons.svg#icon-Facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.instagram.com/">
+            <a class="footer-social-link" href="https://www.instagram.com/" rel = "noopener">
               <svg class="footer-social-icon icon-i" width="32" height="32">
                 <use href="/images/icons.svg#icon-Instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="https://x.com/">
+            <a class="footer-social-link" href="https://x.com/" rel = "noopener">
               <svg class="footer-social-icon icon-x" width="32" height="32">
                 <use href="/images/icons.svg#icon-twitter"></use>
               </svg>
